name:            copen
version:         0.1
license:         GPL
license-file:    LICENSE
author:          dan corson <danl@alum.mit.edu>
synopsis:        <syn>
build-type:      Simple
build-depends:   FUtil, HDBC, HDBC-postgresql, PomTree, array, base, binary,
                 bytestring, containers, derive, haskell98, mtl, nano-md5,
                 parsec, parsec>=3, pgn

executable:      copen
main-is:         Main.hs
hs-source-dirs:  src
